--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,7 @@ soupsieve==2.3.1
 tensorboard
 tensorboard-data-server 
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.6.0
+tensorflow-cpu==2.6.0
 tensorflow-estimator
 termcolor==1.1.0
 tokenizers==0.10.3
